# points_collection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
points_collection/: __main__.py  auth.py  get_hot_words.py  logger.py  main.py  message_sender.py  playwrights.py  search_worker.py  task.py  yaml_config.py
user_data/: config-simple.yaml
